--- a/index.html
+++ b/index.html
@@ -3,12 +3,50 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <!--styles-->
+        <link href="css/bootstrap.min.css" rel="stylesheet">
+        <link href="css/style.css" rel="stylesheet">
+
+
         <!-- <link type="text/css" rel="stylesheet" href="https://cdn.jsdelivr.net/gh/alumuko/vanilla-datetimerange-picker@latest/dist/vanilla-datetimerange-picker.css"> -->
         <link type="text/css" rel="stylesheet" href="dist/vanilla-datetimerange-picker.css">
         <title>DEMO.</title>
     </head>
     <body>
-        <input type="text" id="datetimerange-input1" size="24" style="text-align:center">
+        <!-- <input type="text" id="datetimerange-input1" size="24" style="text-align:center"> -->
+
+        <div class="content-wrap">
+            <!--CONTENT-->
+            <div class="content">
+                <!--HOME-->
+                <section id="home">
+                <div class="container">
+                    <div class="row">
+                    <div class="wrap-hero-content">
+                        <div class="hero-content" >
+                            <h1>Hello</h1>
+                            <br>
+                            <span class="typed"></span>
+                        </div>
+                    </div>
+                    <!-- <div class="mouse-icon margin-20">
+                        <div class="scroll"></div>
+                        </div>
+                    </div> -->
+                </div>
+                </section>
+                <!--/.HOME END-->
+            </div>
+        </div>
+
+
+        <script src="js/jquery-1.9.1.min.js" type="text/javascript"></script>
+        <script src="js/bootstrap.min.js" type="text/javascript"></script>
+        <script src="js/typed.js" type="text/javascript"></script>
+        <script src="js/main.js" type="text/javascript"></script>
+        <script src="js/smooth-scroll.min.js" type="text/javascript"></script>
+
+
         <!-- <script src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js" type="text/javascript"></script> -->
         <script src="momentjs/latest/moment.min.js" type="text/javascript"></script>
         <!-- <script src="https://cdn.jsdelivr.net/gh/alumuko/vanilla-datetimerange-picker@latest/dist/vanilla-datetimerange-picker.js"></script> -->
@@ -19,5 +57,7 @@
                 
             });
         </script>
+
+
     </body>
 </html>
