--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <!-- <link type="text/css" rel="stylesheet" href="https://cdn.jsdelivr.net/gh/alumuko/vanilla-datetimerange-picker@latest/dist/vanilla-datetimerange-picker.css"> -->
         <link type="text/css" rel="stylesheet" href="dist/vanilla-datetimerange-picker.css">
-        <title>DEMO.</title>
+        <title>DEMO</title>
     </head>
     <body>
         <!-- <input type="text" id="datetimerange-input1" size="24" style="text-align:center"> -->
@@ -30,7 +30,7 @@
                     <div class="row">
                     <div class="wrap-hero-content">
                         <div class="hero-content" >
-                            <h1>Hello</h1>
+                            <h1>Helloo, </h1>
                             <br>
                             <span class="typed"></span>
                         </div>
